--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "tests"
   ],
   "dependencies": {
+    "font-awesome": "^4.7.0",
     "skeleton-framework": "^1.1.1",
     "normalize-css": "^5.0.0"
   },
