--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "lodash": "^4.17.2"
+    "lodash": "^4.17.2",
+    "tone": "^0.9.0"
   },
   "devDependencies": {
     "coffeeify": "^2.0.1",
