--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "gulp",
     "build": "gulp build --production"
   },
-  "author": "",
+  "author": "Risyanggi Azmi Faizin <switgarlik@gmail.com",
   "license": "MIT",
   "dependencies": {
     "lodash": "^4.17.2",
@@ -19,9 +19,10 @@
     "gulp-browserify": "^0.5.1",
     "gulp-coffee": "^2.3.3",
     "gulp-concat": "^2.6.1",
+    "gulp-cssnano": "^2.1.0",
     "gulp-if": "^2.0.0",
     "gulp-load-plugins": "^1.1.0",
-    "gulp-sourcemaps": "^1.6.0",
+    "gulp-sass": "^2.1.0",
     "gulp-uglify": "^1.2.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
