--- a/package.json
+++ b/package.json
@@ -20,13 +20,11 @@
     "gulp-coffee": "^2.3.3",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.0",
-    "gulp-if": "^2.0.0",
     "gulp-load-plugins": "^1.1.0",
     "gulp-sass": "^2.1.0",
     "gulp-uglify": "^1.2.0",
     "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "yargs": "^3.8.0"
+    "react-dom": "^15.3.2"
   },
   "private": true
 }
