--- a/package.json
+++ b/package.json
@@ -11,13 +11,11 @@
   "license": "MIT",
   "dependencies": {
     "font-awesome": "^4.7.0",
-    "lodash": "^4.17.2",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "skeleton-framework": "^1.0.10",
-    "tone": "^15.0.4",
-    "vite-plugin-sass": "^0.1.0"
+    "tone": "^15.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -30,7 +28,8 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "sass-embedded": "^1.80.5",
     "typescript": "^5.2.2",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "vite-plugin-sass": "^0.1.0"
   },
   "keywords": [],
   "private": true
