--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test": "vitest"
   },
   "author": "Risyanggi Azmi Faizin",
   "license": "MIT",
@@ -27,7 +28,8 @@
     "sass-embedded": "^1.80.5",
     "typescript": "^5.2.2",
     "vite": "^5.4.10",
-    "vite-plugin-sass": "^0.1.0"
+    "vite-plugin-sass": "^0.1.0",
+    "vitest": "^2.1.4"
   },
   "keywords": [],
   "private": true
