--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Easy guitar chord variation finder.",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --base ./",
     "serve": "vite preview",
     "test": "vitest"
   },
